added carousel1-05 inherit

--- a/index.html
+++ b/index.html
@@ -91,9 +91,20 @@
   <!-- begin carousel1-05 placeholder -->
   <h2 class="item-id">carousel1-05</h1>
   <div class="row container-fluid">
-    <div class="col-sm-3">39</div>
+    <div class="col-sm-3">
+      <!-- inherit -->
+      <!-- begin carousel1-06 -->
+      <div class="carousel1-06">
+        <div class="carousel1-06_content" id="carousel1-06_content">
+          
+        </div>
+        <nav id="carousel1-06_pagination"></nav>
+        <button id="carousel1_06_previous">previous</button><button id="carousel1_06_next">next</button>
+      </div>
+      <!-- end carousel1-06 -->
+    </div>
     <div class="col-sm-9">
-      <!-- begin carousel1-04 -->
+      <!-- begin carousel1-05 -->
       <div class="carousel1-05">
         <div class="carousel1-05_content" id="carousel1-05_content">
           
@@ -101,10 +112,10 @@
         <nav id="carousel1-05_pagination"></nav>
         <button id="carousel1_05_previous">previous</button><button id="carousel1_05_next">next</button>
       </div>
-      <!-- end carousel1-04 -->
+      <!-- end carousel1-05 -->
     </div>
   </div>
-  <!-- end carousel1-04 placeholder -->
+  <!-- end carousel1-05 placeholder -->
 
   
   <script src="dist/index.bundle.js"></script>
