--- a/index.html
+++ b/index.html
@@ -78,12 +78,13 @@
       <!-- begin carousel1-04 -->
       <div class="carousel1-04">
         <div class="carousel1-04_content" id="carousel1-04_content">
-          
         </div>
-        <nav id="carousel1-04_pagination"></nav>
-        <button id="carousel1_04_previous">previous</button><button id="carousel1_04_next">next</button>
+      <nav id="carousel1-04_pagination" class="carousel1-04_pagination"></nav>
+      <div class="row carousel1-04_prevnext">
+        <span id="carousel1_04_previous" class="carousel1_04_previous"><p>&lt;</p></span><span id="carousel1_04_next" class="carousel1_04_next"><p>&gt;</p></span>
       </div>
-      <!-- end carousel1-04 -->
+    </div>
+    <!-- end carousel1-04 -->
     </div>
   </div>
   <!-- end carousel1-04 placeholder -->
@@ -92,16 +93,7 @@
   <h2 class="item-id">carousel1-05</h1>
   <div class="row container-fluid">
     <div class="col-sm-3">
-      <!-- inherit -->
-      <!-- begin carousel1-06 -->
-      <div class="carousel1-06">
-        <div class="carousel1-06_content" id="carousel1-06_content">
-          
-        </div>
-        <nav id="carousel1-06_pagination"></nav>
-        <button id="carousel1_06_previous">previous</button><button id="carousel1_06_next">next</button>
-      </div>
-      <!-- end carousel1-06 -->
+      39
     </div>
     <div class="col-sm-9">
       <!-- begin carousel1-05 -->
