added carousel1-01 mixins

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         <div class="carousel1-01_content" id="carousel1-01_content">
           loading...
         </div>
-        <nav id="carousel1-01_pagination"></nav>
+        <nav id="carousel1-01_pagination" class="carousel1-01_pagination"></nav>
+        <div class="carousel1-01_prevnext">
         <button id="carousel1_01_previous">previous</button><button id="carousel1_01_next">next</button>
+        </div>
       </div>
       <!-- end carousel1-01 -->
     </div>
