--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
         <div class="carousel1-02_content" id="carousel1-02_content">
           loading...
         </div>
-        <nav id="carousel1-02_pagination"></nav>
+        <nav id="carousel1-02_pagination" class="carousel1-02_pagination"></nav>
+        <div class="carousel1-02_prevnext">
         <button id="carousel1_02_previous">previous</button><button id="carousel1_02_next">next</button>
+        </div>
       </div>
       <!-- end carousel1-02 -->
     </div>
@@ -64,8 +66,10 @@
         <div class="carousel1-03_content" id="carousel1-03_content">
           loading...
         </div>
-        <nav id="carousel1-03_pagination"></nav>
+        <nav id="carousel1-03_pagination" class="carousel1-03_pagination"></nav>
+        <div class="carousel1-03_prevnext">
         <button id="carousel1_03_previous">previous</button><button id="carousel1_03_next">next</button>
+        </div>
       </div>
       <!-- end carousel1-03 -->
     </div>
