added carousel1-05 mixins

--- a/index.html
+++ b/index.html
@@ -26,96 +26,98 @@
         <div class="carousel1-01_content" id="carousel1-01_content">
           loading...
         </div>
-        <nav id="carousel1-01_pagination" class="carousel1-01_pagination"></nav>
-        <div class="carousel1-01_prevnext">
+      <nav id="carousel1-01_pagination" class="carousel1-01_pagination"></nav>
+      <div class="carousel1-01_prevnext">
         <button id="carousel1_01_previous">previous</button><button id="carousel1_01_next">next</button>
-        </div>
-      </div>
-      <!-- end carousel1-01 -->
-    </div>
-  </div>
-  <!-- end carousel1-01 placeholder -->
-
-  <!-- begin carousel1-02 placeholder -->
-  <h2 class="item-id">carousel1-02</h1>
-  <div class="row container-fluid">
-    <div class="col-sm-3">39</div>
-    <div class="col-sm-9">
-      <!-- begin carousel1-02 -->
-      <div class="carousel1-02">
-        <div class="carousel1-02_content" id="carousel1-02_content">
-          loading...
-        </div>
-        <nav id="carousel1-02_pagination" class="carousel1-02_pagination"></nav>
-        <div class="carousel1-02_prevnext">
-        <button id="carousel1_02_previous">previous</button><button id="carousel1_02_next">next</button>
-        </div>
-      </div>
-      <!-- end carousel1-02 -->
-    </div>
-  </div>
-  <!-- end carousel1-02 placeholder -->
-
-  <!-- begin carousel1-03 placeholder -->
-  <h2 class="item-id">carousel1-03</h1>
-  <div class="row container-fluid">
-    <div class="col-sm-3">39</div>
-    <div class="col-sm-9">
-      <!-- begin carousel1-03 -->
-      <div class="carousel1-03">
-        <div class="carousel1-03_content" id="carousel1-03_content">
-          loading...
-        </div>
-        <nav id="carousel1-03_pagination" class="carousel1-03_pagination"></nav>
-        <div class="carousel1-03_prevnext">
-        <button id="carousel1_03_previous">previous</button><button id="carousel1_03_next">next</button>
-        </div>
-      </div>
-      <!-- end carousel1-03 -->
-    </div>
-  </div>
-  <!-- end carousel1-02 placeholder -->
-
-  <!-- begin carousel1-04 placeholder -->
-  <h2 class="item-id">carousel1-04</h1>
-  <div class="row container-fluid">
-    <div class="col-sm-3">39</div>
-    <div class="col-sm-9">
-      <!-- begin carousel1-04 -->
-      <div class="carousel1-04">
-        <div class="carousel1-04_content" id="carousel1-04_content">
-        </div>
-      <nav id="carousel1-04_pagination" class="carousel1-04_pagination"></nav>
-      <div class="row carousel1-04_prevnext">
-        <span id="carousel1_04_previous" class="carousel1_04_previous"><p>&lt;</p></span><span id="carousel1_04_next" class="carousel1_04_next"><p>&gt;</p></span>
       </div>
     </div>
-    <!-- end carousel1-04 -->
-    </div>
+    <!-- end carousel1-01 -->
   </div>
-  <!-- end carousel1-04 placeholder -->
+</div>
+<!-- end carousel1-01 placeholder -->
 
-  <!-- begin carousel1-05 placeholder -->
-  <h2 class="item-id">carousel1-05</h1>
-  <div class="row container-fluid">
-    <div class="col-sm-3">
-      39
-    </div>
-    <div class="col-sm-9">
-      <!-- begin carousel1-05 -->
-      <div class="carousel1-05">
-        <div class="carousel1-05_content" id="carousel1-05_content">
-          
-        </div>
-        <nav id="carousel1-05_pagination"></nav>
-        <button id="carousel1_05_previous">previous</button><button id="carousel1_05_next">next</button>
+<!-- begin carousel1-02 placeholder -->
+<h2 class="item-id">carousel1-02</h1>
+<div class="row container-fluid">
+  <div class="col-sm-3">39</div>
+  <div class="col-sm-9">
+    <!-- begin carousel1-02 -->
+    <div class="carousel1-02">
+      <div class="carousel1-02_content" id="carousel1-02_content">
+        loading...
       </div>
-      <!-- end carousel1-05 -->
+    <nav id="carousel1-02_pagination" class="carousel1-02_pagination"></nav>
+    <div class="carousel1-02_prevnext">
+      <button id="carousel1_02_previous">previous</button><button id="carousel1_02_next">next</button>
     </div>
   </div>
-  <!-- end carousel1-05 placeholder -->
+  <!-- end carousel1-02 -->
+</div>
+</div>
+<!-- end carousel1-02 placeholder -->
 
-  
-  <script src="dist/index.bundle.js"></script>
+<!-- begin carousel1-03 placeholder -->
+<h2 class="item-id">carousel1-03</h1>
+<div class="row container-fluid">
+  <div class="col-sm-3">39</div>
+  <div class="col-sm-9">
+    <!-- begin carousel1-03 -->
+    <div class="carousel1-03">
+      <div class="carousel1-03_content" id="carousel1-03_content">
+        loading...
+      </div>
+    <nav id="carousel1-03_pagination" class="carousel1-03_pagination"></nav>
+    <div class="carousel1-03_prevnext">
+      <button id="carousel1_03_previous">previous</button><button id="carousel1_03_next">next</button>
+    </div>
+  </div>
+  <!-- end carousel1-03 -->
+</div>
+</div>
+<!-- end carousel1-03 placeholder -->
+
+<!-- begin carousel1-04 placeholder -->
+<h2 class="item-id">carousel1-04</h1>
+<div class="row container-fluid">
+  <div class="col-sm-3">39</div>
+  <div class="col-sm-9">
+    <!-- begin carousel1-04 -->
+    <div class="carousel1-04">
+      <div class="carousel1-04_content" id="carousel1-04_content">
+      </div>
+    <nav id="carousel1-04_pagination" class="carousel1-04_pagination"></nav>
+    <div class="row carousel1-04_prevnext">
+      <span id="carousel1_04_previous" class="carousel1_04_previous"><p>&lt;</p></span><span id="carousel1_04_next" class="carousel1_04_next"><p>&gt;</p></span>
+    </div>
+  </div>
+  <!-- end carousel1-04 -->
+</div>
+</div>
+<!-- end carousel1-04 placeholder -->
+
+<!-- begin carousel1-05 placeholder -->
+<h2 class="item-id">carousel1-05</h1>
+<div class="row container-fluid">
+  <div class="col-sm-3">
+    39
+  </div>
+  <div class="col-sm-9">
+    <!-- begin carousel1-05 -->
+    <div class="carousel1-05">
+      <div class="carousel1-05_content" id="carousel1-05_content">
+        
+      </div>
+      <div class="carousel1-05_prevnext">
+        <span id="carousel1_05_previous" class="carousel1_05_previous">previous</span>
+      <nav id="carousel1-05_pagination" class="carousel1-05_pagination"></nav>
+      <span id="carousel1_05_next" class="carousel1_05_next">next</span>
+    </div>
+  </div>
+  <!-- end carousel1-05 -->
+</div>
+</div>
+<!-- end carousel1-05 placeholder -->
+
+<script src="dist/index.bundle.js"></script>
 </body>
 </html>
