--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       <nav id="carousel1-01_pagination" class="carousel1-01_pagination"></nav>
       <div class="carousel1-01_prevnext">
-        <button id="carousel1_01_previous">previous</button><button id="carousel1_01_next">next</button>
+        <button id="carousel1_01_previous">Previous</button><button id="carousel1_01_next">Next</button>
       </div>
     </div>
     <!-- end carousel1-01 -->
@@ -87,7 +87,7 @@
       </div>
     <nav id="carousel1-04_pagination" class="carousel1-04_pagination"></nav>
     <div class="row carousel1-04_prevnext">
-      <span id="carousel1_04_previous" class="carousel1_04_previous"><p>&lt;</p></span><span id="carousel1_04_next" class="carousel1_04_next"><p>&gt;</p></span>
+      <span id="carousel1_04_previous" class="carousel1_04_previous"><svg xmlns="http://www.w3.org/2000/svg" class="carousel1_04_chevron"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg></span><span id="carousel1_04_next" class="carousel1_04_next"><svg xmlns="http://www.w3.org/2000/svg" class="carousel1_04_chevron"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg></span>
     </div>
   </div>
   <!-- end carousel1-04 -->
