added chevron icon on carousel1-01 buttons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       <nav id="carousel1-01_pagination" class="carousel1-01_pagination"></nav>
       <div class="carousel1-01_prevnext">
-        <button id="carousel1_01_previous">Previous</button><button id="carousel1_01_next">Next</button>
+        <button id="carousel1_01_previous"><svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>Previous</button><button id="carousel1_01_next">Next<svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></button>
       </div>
     </div>
     <!-- end carousel1-01 -->
