tweaked carousel1-01 buttons

--- a/index.html
+++ b/index.html
@@ -16,23 +16,31 @@
   <![endif]-->
 </head>
 <body>
-  <!-- begin carousel1-01 placeholder -->
-  <h2 class="item-id">carousel1-01</h1>
-  <div class="row container-fluid">
-    <div class="col-sm-3">39</div>
-    <div class="col-sm-9">
-      <!-- begin carousel1-01 -->
-      <div class="carousel1-01">
-        <div class="carousel1-01_content" id="carousel1-01_content">
-          loading...
-        </div>
-      <nav id="carousel1-01_pagination" class="carousel1-01_pagination"></nav>
-      <div class="carousel1-01_prevnext">
-        <button id="carousel1_01_previous"><svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>Previous</button><button id="carousel1_01_next">Next<svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></button>
+<!-- begin carousel1-01 placeholder -->
+<h2 class="item-id">carousel1-01</h1>
+<div class="row container-fluid">
+  <div class="col-sm-3">39</div>
+  <div class="col-sm-9">
+    <!-- begin carousel1-01 -->
+    <div class="carousel1-01">
+      <div class="carousel1-01_content" id="carousel1-01_content">
+        loading...
       </div>
-    </div>
-    <!-- end carousel1-01 -->
+    <nav id="carousel1-01_pagination" class="carousel1-01_pagination"></nav>
+    <div class="carousel1-01_prevnext">
+      <button id="carousel1_01_previous" class="carousel1_01_previous">
+      <svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+    </svg>
+    <span>Previous</span>
+    </button>
+    <button id="carousel1_01_next" class="carousel1_01_next">
+    <span>Next</span>
+    <svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
+    </button>
   </div>
+</div>
+<!-- end carousel1-01 -->
+</div>
 </div>
 <!-- end carousel1-01 placeholder -->
 
