--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
       </div>
     <nav id="carousel1-02_pagination" class="carousel1-02_pagination"></nav>
     <div class="carousel1-02_prevnext">
-      <button id="carousel1_02_previous">previous</button><button id="carousel1_02_next">next</button>
+      <button id="carousel1_02_previous" class="carousel1_01_previous">
+      <svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+    </svg>
+    <span>Previous</span>
+    </button>
+    <button id="carousel1_02_next" class="carousel1_01_next">
+    <span>Next</span>
+    <svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
+    </button>
     </div>
   </div>
   <!-- end carousel1-02 -->
