tweaked carousel1-03 buttons

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       </div>
     <nav id="carousel1-02_pagination" class="carousel1-02_pagination"></nav>
     <div class="carousel1-02_prevnext">
-      <button id="carousel1_02_previous" class="carousel1_01_previous">
+      <button id="carousel1_02_previous" class="carousel1_02_previous">
       <svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
     </svg>
     <span>Previous</span>
     </button>
-    <button id="carousel1_02_next" class="carousel1_01_next">
+    <button id="carousel1_02_next" class="carousel1_02_next">
     <span>Next</span>
     <svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
     </button>
@@ -84,7 +84,15 @@
       </div>
     <nav id="carousel1-03_pagination" class="carousel1-03_pagination"></nav>
     <div class="carousel1-03_prevnext">
-      <button id="carousel1_03_previous">previous</button><button id="carousel1_03_next">next</button>
+      <button id="carousel1_03_previous" class="carousel1_03_previous">
+      <svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+    </svg>
+    <span>Previous</span>
+    </button>
+    <button id="carousel1_03_next" class="carousel1_03_next">
+    <span>Next</span>
+    <svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
+    </button>
     </div>
   </div>
   <!-- end carousel1-03 -->
