tweaked carousel1-05 buttons

--- a/index.html
+++ b/index.html
@@ -132,9 +132,16 @@
         
       </div>
       <div class="carousel1-05_prevnext">
-        <span id="carousel1_05_previous" class="carousel1_05_previous">previous</span>
+        <button id="carousel1_05_previous" class="carousel1_05_previous">
+      <svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+    </svg>
+    <span>Previous</span>
+    </button>
       <nav id="carousel1-05_pagination" class="carousel1-05_pagination"></nav>
-      <span id="carousel1_05_next" class="carousel1_05_next">next</span>
+      <button id="carousel1_05_next" class="carousel1_05_next">
+    <span>Next</span>
+    <svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
+    </button>
     </div>
   </div>
   <!-- end carousel1-05 -->
