added tabindex for buttons

--- a/index.html
+++ b/index.html
@@ -16,146 +16,140 @@
   <![endif]-->
 </head>
 <body>
-<!-- begin carousel1-01 placeholder -->
-<h2 class="item-id">carousel1-01</h1>
-<div class="row container-fluid">
-  <div class="col-sm-3">39</div>
-  <div class="col-sm-9">
-    <!-- begin carousel1-01 -->
-    <div class="carousel1-01">
-      <div class="carousel1-01_content" id="carousel1-01_content">
-        loading...
+  <!-- begin carousel1-01 placeholder -->
+  <h2 class="item-id">carousel1-01</h1>
+    <div class="row container-fluid">
+      <div class="col-sm-3">39</div>
+      <div class="col-sm-9">
+        <!-- begin carousel1-01 -->
+        <div class="carousel1-01">
+          <div class="carousel1-01_content" id="carousel1-01_content">
+            loading...
+          </div>
+          <nav id="carousel1-01_pagination" class="carousel1-01_pagination"></nav>
+          <div class="carousel1-01_prevnext">
+            <button id="carousel1_01_previous" class="carousel1_01_previous" tabindex="0">
+              <svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+              </svg>
+              <span>Previous</span>
+            </button>
+            <button id="carousel1_01_next" class="carousel1_01_next" tabindex="0">
+              <span>Next</span>
+              <svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
+            </button>
+          </div>
+        </div>
+        <!-- end carousel1-01 -->
       </div>
-    <nav id="carousel1-01_pagination" class="carousel1-01_pagination"></nav>
-    <div class="carousel1-01_prevnext">
-      <button id="carousel1_01_previous" class="carousel1_01_previous">
-      <svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
-    </svg>
-    <span>Previous</span>
-    </button>
-    <button id="carousel1_01_next" class="carousel1_01_next">
-    <span>Next</span>
-    <svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
-    </button>
-  </div>
-</div>
-<!-- end carousel1-01 -->
-</div>
-</div>
-<!-- end carousel1-01 placeholder -->
-
-<!-- begin carousel1-02 placeholder -->
-<h2 class="item-id">carousel1-02</h1>
-<div class="row container-fluid">
-  <div class="col-sm-3">39</div>
-  <div class="col-sm-9">
-    <!-- begin carousel1-02 -->
-    <div class="carousel1-02">
-      <div class="carousel1-02_content" id="carousel1-02_content">
-        loading...
-      </div>
-    <nav id="carousel1-02_pagination" class="carousel1-02_pagination"></nav>
-    <div class="carousel1-02_prevnext">
-      <button id="carousel1_02_previous" class="carousel1_02_previous">
-      <svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
-    </svg>
-    <span>Previous</span>
-    </button>
-    <button id="carousel1_02_next" class="carousel1_02_next">
-    <span>Next</span>
-    <svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
-    </button>
     </div>
-  </div>
-  <!-- end carousel1-02 -->
-</div>
-</div>
-<!-- end carousel1-02 placeholder -->
-
-<!-- begin carousel1-03 placeholder -->
-<h2 class="item-id">carousel1-03</h1>
-<div class="row container-fluid">
-  <div class="col-sm-3">39</div>
-  <div class="col-sm-9">
-    <!-- begin carousel1-03 -->
-    <div class="carousel1-03">
-      <div class="carousel1-03_content" id="carousel1-03_content">
-        loading...
+    <!-- end carousel1-01 placeholder -->
+    <!-- begin carousel1-02 placeholder -->
+    <h2 class="item-id">carousel1-02</h1>
+      <div class="row container-fluid">
+        <div class="col-sm-3">39</div>
+        <div class="col-sm-9">
+          <!-- begin carousel1-02 -->
+          <div class="carousel1-02">
+            <div class="carousel1-02_content" id="carousel1-02_content">
+              loading...
+            </div>
+            <nav id="carousel1-02_pagination" class="carousel1-02_pagination"></nav>
+            <div class="carousel1-02_prevnext">
+              <button id="carousel1_02_previous" class="carousel1_02_previous" tabindex="0">
+                <svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+                </svg>
+                <span>Previous</span>
+              </button>
+              <button id="carousel1_02_next" class="carousel1_02_next" tabindex="0">
+                <span>Next</span>
+                <svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
+              </button>
+            </div>
+          </div>
+          <!-- end carousel1-02 -->
+        </div>
       </div>
-    <nav id="carousel1-03_pagination" class="carousel1-03_pagination"></nav>
-    <div class="carousel1-03_prevnext">
-      <button id="carousel1_03_previous" class="carousel1_03_previous">
-      <svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
-    </svg>
-    <span>Previous</span>
-    </button>
-    <button id="carousel1_03_next" class="carousel1_03_next">
-    <span>Next</span>
-    <svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
-    </button>
-    </div>
-  </div>
-  <!-- end carousel1-03 -->
-</div>
-</div>
-<!-- end carousel1-03 placeholder -->
-
-<!-- begin carousel1-04 placeholder -->
-<h2 class="item-id">carousel1-04</h1>
-<div class="row container-fluid">
-  <div class="col-sm-3">39</div>
-  <div class="col-sm-9">
-    <!-- begin carousel1-04 -->
-    <div class="carousel1-04">
-      <div class="carousel1-04_content" id="carousel1-04_content">
-      </div>
-    <nav id="carousel1-04_pagination" class="carousel1-04_pagination"></nav>
-    <div class="row carousel1-04_prevnext">
-      <span id="carousel1_04_previous" class="carousel1_04_previous">
-        <!-- chevron left -->
-        <svg xmlns="http://www.w3.org/2000/svg" class="carousel1_04_chevron"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>
-      </span>
-      <span id="carousel1_04_next" class="carousel1_04_next">
-        <!-- chevron right -->
-        <svg xmlns="http://www.w3.org/2000/svg" class="carousel1_04_chevron"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
-      </span>
-    </div>
-  </div>
-  <!-- end carousel1-04 -->
-</div>
-</div>
-<!-- end carousel1-04 placeholder -->
-
-<!-- begin carousel1-05 placeholder -->
-<h2 class="item-id">carousel1-05</h1>
-<div class="row container-fluid">
-  <div class="col-sm-3">
-    39
-  </div>
-  <div class="col-sm-9">
-    <!-- begin carousel1-05 -->
-    <div class="carousel1-05">
-      <div class="carousel1-05_content" id="carousel1-05_content">
-        
-      </div>
-      <div class="carousel1-05_prevnext">
-        <button id="carousel1_05_previous" class="carousel1_05_previous">
-      <svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
-    </svg>
-    <span>Previous</span>
-    </button>
-      <nav id="carousel1-05_pagination" class="carousel1-05_pagination"></nav>
-      <button id="carousel1_05_next" class="carousel1_05_next">
-    <span>Next</span>
-    <svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
-    </button>
-    </div>
-  </div>
-  <!-- end carousel1-05 -->
-</div>
-</div>
-<!-- end carousel1-05 placeholder -->
-
-<script src="dist/index.bundle.js"></script>
-</body>
-</html>
+      <!-- end carousel1-02 placeholder -->
+      <!-- begin carousel1-03 placeholder -->
+      <h2 class="item-id">carousel1-03</h1>
+        <div class="row container-fluid">
+          <div class="col-sm-3">39</div>
+          <div class="col-sm-9">
+            <!-- begin carousel1-03 -->
+            <div class="carousel1-03">
+              <div class="carousel1-03_content" id="carousel1-03_content">
+                loading...
+              </div>
+              <nav id="carousel1-03_pagination" class="carousel1-03_pagination"></nav>
+              <div class="carousel1-03_prevnext">
+                <button id="carousel1_03_previous" class="carousel1_03_previous" tabindex="0">
+                  <svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+                  </svg>
+                  <span>Previous</span>
+                </button>
+                <button id="carousel1_03_next" class="carousel1_03_next" tabindex="0">
+                  <span>Next</span>
+                  <svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
+                </button>
+              </div>
+            </div>
+            <!-- end carousel1-03 -->
+          </div>
+        </div>
+        <!-- end carousel1-03 placeholder -->
+        <!-- begin carousel1-04 placeholder -->
+        <h2 class="item-id">carousel1-04</h1>
+          <div class="row container-fluid">
+            <div class="col-sm-3">39</div>
+            <div class="col-sm-9">
+              <!-- begin carousel1-04 -->
+              <div class="carousel1-04">
+                <div class="carousel1-04_content" id="carousel1-04_content">
+                </div>
+                <nav id="carousel1-04_pagination" class="carousel1-04_pagination"></nav>
+                <div class="row carousel1-04_prevnext">
+                  <span id="carousel1_04_previous" class="carousel1_04_previous">
+                    <!-- chevron left -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="carousel1_04_chevron"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>
+                  </span>
+                  <span id="carousel1_04_next" class="carousel1_04_next">
+                    <!-- chevron right -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="carousel1_04_chevron"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
+                  </span>
+                </div>
+              </div>
+              <!-- end carousel1-04 -->
+            </div>
+          </div>
+          <!-- end carousel1-04 placeholder -->
+          <!-- begin carousel1-05 placeholder -->
+          <h2 class="item-id">carousel1-05</h1>
+            <div class="row container-fluid">
+              <div class="col-sm-3">
+                39
+              </div>
+              <div class="col-sm-9">
+                <!-- begin carousel1-05 -->
+                <div class="carousel1-05">
+                  <div class="carousel1-05_content" id="carousel1-05_content">
+                  </div>
+                  <div class="carousel1-05_prevnext">
+                    <button id="carousel1_05_previous" class="carousel1_05_previous" tabindex="0">
+                      <svg xmlns="http://www.w3.org/2000/svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+                      </svg>
+                      <span>Previous</span>
+                    </button>
+                    <nav id="carousel1-05_pagination" class="carousel1-05_pagination"></nav>
+                    <button id="carousel1_05_next" class="carousel1_05_next" tabindex="0">
+                      <span>Next</span>
+                      <svg xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
+                    </button>
+                  </div>
+                </div>
+                <!-- end carousel1-05 -->
+              </div>
+            </div>
+            <!-- end carousel1-05 placeholder -->
+            <script src="dist/index.bundle.js"></script>
+          </body>
+          </html>
