modified helpers/changed import order

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <!-- begin carousel1-01 placeholder -->
   <h2 class="item-id">carousel1-01</h1>
-    <div class="row container-fluid">
+    <div class="row no-gutters">
       <div class="col-sm-3">39</div>
       <div class="col-sm-9">
         <!-- begin carousel1-01 -->
@@ -45,7 +45,7 @@
     <!-- end carousel1-01 placeholder -->
     <!-- begin carousel1-02 placeholder -->
     <h2 class="item-id">carousel1-02</h1>
-      <div class="row container-fluid">
+      <div class="row no-gutters">
         <div class="col-sm-3">39</div>
         <div class="col-sm-9">
           <!-- begin carousel1-02 -->
@@ -72,7 +72,7 @@
       <!-- end carousel1-02 placeholder -->
       <!-- begin carousel1-03 placeholder -->
       <h2 class="item-id">carousel1-03</h1>
-        <div class="row container-fluid">
+        <div class="row no-gutters">
           <div class="col-sm-3">39</div>
           <div class="col-sm-9">
             <!-- begin carousel1-03 -->
@@ -99,7 +99,7 @@
         <!-- end carousel1-03 placeholder -->
         <!-- begin carousel1-04 placeholder -->
         <h2 class="item-id">carousel1-04</h1>
-          <div class="row container-fluid">
+          <div class="row no-gutters">
             <div class="col-sm-3">39</div>
             <div class="col-sm-9">
               <!-- begin carousel1-04 -->
@@ -107,7 +107,7 @@
                 <div class="carousel1-04_content" id="carousel1-04_content">
                 </div>
                 <nav id="carousel1-04_pagination" class="carousel1-04_pagination"></nav>
-                <div class="row carousel1-04_prevnext">
+                <div class="row no-gutters carousel1-04_prevnext">
                   <span id="carousel1_04_previous" class="carousel1_04_previous">
                     <!-- chevron left -->
                     <svg xmlns="http://www.w3.org/2000/svg" class="carousel1_04_chevron"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>
@@ -124,7 +124,7 @@
           <!-- end carousel1-04 placeholder -->
           <!-- begin carousel1-05 placeholder -->
           <h2 class="item-id">carousel1-05</h1>
-            <div class="row container-fluid">
+            <div class="row no-gutters">
               <div class="col-sm-3">
                 39
               </div>
